--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ a- Qué son las oraciones?
    El niño come muy bien
 
 
-b- Explica cada una de las clases o tipos de oraciones con su ejemplo. 
+b- Tipos de oraciones con su ejemplo. 
 
    Las oraciones se pueden clasificadas según distintos criterios:
 
