--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Investiga y copia:
+Investiga y copia:<br>
 a- Qué son las oraciones?
    Una oración es una palabra o un conjunto de palabras ordenadas que se caracteriza por poseer sentido completo.
    Las oraciones empiezan siempre con mayúscula y terminan en un punto
