--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 Investiga y copia:<br/>
 a- Qué son las oraciones?
    Una oración es una palabra o un conjunto de palabras ordenadas que se caracteriza por poseer sentido completo.
@@ -43,3 +44,4 @@ b- Tipos de oraciones con su ejemplo.
              Por ejemplo: El abogado ganó el juicio. (“ganó el juicio” es el único predicado)
         4.2) Oraciones compuestas. Tienen más de un predicado. 
              Por ejemplo: El abogado ganó el juicio y los acusados fueron presos. (“ganó el juicio” y “fueron presos” son dos predicados que corresponden a dos suboraciones diferentes).
+</html>
